<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/movie">

    <fragment
        android:id="@+id/movie"
        android:name="id.xxx.submission.ui.movie.MovieFragment"
        android:label="@string/movies"
        tools:layout="@layout/fragment_movie" />

    <fragment
        android:id="@+id/tv"
        android:name="id.xxx.submission.ui.tv.TvFragment"
        android:label="@string/tv_show"
        tools:layout="@layout/fragment_tv" />
</navigation>