...
            app:defaultNavHost="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:navGraph="@navigation/nav_graph_home"
            tools:ignore="FragmentTagUsage" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="?android:windowBackground"
            app:itemIconTint="@color/selector_bottom_navigation"
            app:itemTextColor="@color/selector_bottom_navigation"
...
