<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="detail">Detail</string>
    <string name="title">Title</string>
    <string name="release">Release</string>
    <string name="original_language">Original Language</string>
    <string name="user_score">User Score</string>
    <string name="overview">Overview</string>
    <string name="genre">Genre</string>
    <string name="movies">Movies</string>
    <string name="tv_show">Tv Show</string>
    <string name="tab_1_movies">Movies</string>
    <string name="tab_2_tv">Tv</string>
    <string name="favorite">Favorite</string>
    <string name="sorting">Sorting</string>
    <string name="by_name">By Name</string>
    <string name="by_release">By Release</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="btn_add">btn_add</string>
</resources>