<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/detail_movie">

    <fragment
        android:id="@+id/detail_movie"
        android:name="id.xxx.submission.ui.detail.DetailMovieFragment"
        tools:layout="@layout/fragment_detail_movie">
        <action
            android:id="@+id/detail_movie"
            app:destination="@id/detail_movie"
            app:launchSingleTop="true"
            app:popUpTo="@id/detail_movie"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/detail_tv"
        android:name="id.xxx.submission.ui.detail.DetailTvFragment"
        tools:layout="@layout/fragment_detail_tv">
        <action
            android:id="@id/detail_tv"
            app:destination="@id/detail_tv"
            app:launchSingleTop="true"
            app:popUpTo="@id/detail_tv"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>