...
                app:defaultNavHost="true"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:navGraph="@navigation/nav_graph_detail"
                tools:ignore="FragmentTagUsage" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:backgroundTint="?colorPrimary"
                android:contentDescription="@string/btn_add"
                app:layout_anchor="@id/app_bar"
...
