...
                android:text="@string/overview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/genre_content" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/overview_content"
                style="@style/detail_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{data.overview}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline"
...
